--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GreenTrack - Aplikacja proekologiczna</title>
+    <title>GreenTrack - Partnerzy & Blog</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <style>
         body {
@@ -58,6 +58,40 @@
             background-color: #45a049;
         }
 
+        .partner-list {
+            list-style: none;
+            padding: 0;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+        }
+
+        .partner-list li {
+            background-color: #fff;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            padding: 20px;
+            max-width: 200px;
+            text-align: center;
+        }
+
+        .partner-list li h3 {
+            margin-top: 10px;
+        }
+
+        .social-icons {
+            margin-top: 20px;
+            text-align: center;
+        }
+
+        .social-icons a {
+            margin: 0 15px;
+            font-size: 1.5em;
+            color: #333;
+            text-decoration: none;
+        }
+
         footer {
             background-color: #333;
             color: white;
@@ -99,15 +133,57 @@
 <body>
 
     <header>
-        <h1>GreenTrack</h1>
-        <p>Rewolucyjna aplikacja proekologiczna dla młodzieży</p>
+        <h1>GreenTrack - Partnerzy & Blog</h1>
+        <p>Nasze wsparcie w ochronie środowiska</p>
     </header>
 
     <section>
-        <h2>Dołącz do naszej społeczności!</h2>
-        <p>GreenTrack to aplikacja, która łączy młodzież z ekologicznymi wyzwaniami. Przez grywalizację i wspólne działania, pomagamy wdrażać proekologiczne nawyki w życie codzienne.</p>
-        <p>Zacznij działać już teraz, zbieraj punkty, rywalizuj z przyjaciółmi i wspólnie zmieniajmy naszą planetę na lepsze!</p>
-        <a href="#" class="cta-button">Pobierz aplikację</a>
+        <h2>Partnerzy</h2>
+        <p>Współpracujemy z organizacjami i firmami, które wspierają nasze proekologiczne inicjatywy. Lista partnerów jest w trakcie aktualizacji.</p>
+
+        <ul class="partner-list">
+            <!-- Przykładowi partnerzy -->
+            <li>
+                <img src="https://via.placeholder.com/150" alt="Partner 1">
+                <h3>Partner 1</h3>
+            </li>
+            <li>
+                <img src="https://via.placeholder.com/150" alt="Partner 2">
+                <h3>Partner 2</h3>
+            </li>
+            <li>
+                <img src="https://via.placeholder.com/150" alt="Partner 3">
+                <h3>Partner 3</h3>
+            </li>
+        </ul>
+
+    </section>
+
+    <section>
+        <h2>Blog</h2>
+        <p>Przeczytaj nasze najnowsze wpisy o ochronie środowiska i proekologicznych inicjatywach.</p>
+
+        <div>
+            <h3>Jak zacząć działać na rzecz planety?</h3>
+            <p>Proste kroki, które możesz podjąć już teraz, aby wprowadzić zmiany na lepsze. Zaczynamy od małych nawyków!</p>
+            <a href="#" class="cta-button">Przeczytaj więcej</a>
+        </div>
+
+        <div style="margin-top: 30px;">
+            <h3>Zero Waste – Kiedy warto zacząć?</h3>
+            <p>Oto nasze wskazówki, jak wprowadzić filozofię Zero Waste do swojego życia.</p>
+            <a href="#" class="cta-button">Przeczytaj więcej</a>
+        </div>
+
+    </section>
+
+    <section class="social-icons">
+        <a href="https://www.facebook.com/TwojaStrona" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="40">
+        </a>
+        <a href="https://www.instagram.com/TwojaStrona" target="_blank">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1024px-Instagram_logo_2022.svg.png" alt="Instagram" width="40">
+        </a>
     </section>
 
     <footer>
