--- a/index.html
+++ b/index.html
@@ -5,190 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GreenTrack - Partnerzy & Blog</title>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: 'Roboto', sans-serif;
-            background-color: #f4f9f9;
-            color: #333;
-        }
-
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        header h1 {
-            font-size: 2.5em;
-            margin: 0;
-        }
-
-        section {
-            padding: 40px 10%;
-            text-align: center;
-        }
-
-        section h2 {
-            font-size: 2em;
-            color: #4CAF50;
-        }
-
-        section p {
-            font-size: 1.2em;
-            color: #555;
-            line-height: 1.6;
-        }
-
-        .cta-button {
-            background-color: #4CAF50;
-            color: white;
-            padding: 15px 30px;
-            text-decoration: none;
-            border-radius: 5px;
-            font-size: 1.2em;
-            transition: background-color 0.3s;
-        }
-
-        .cta-button:hover {
-            background-color: #45a049;
-        }
-
-        .partner-list {
-            list-style: none;
-            padding: 0;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            gap: 20px;
-        }
-
-        .partner-list li {
-            background-color: #fff;
-            border: 1px solid #ddd;
-            border-radius: 10px;
-            padding: 20px;
-            max-width: 200px;
-            text-align: center;
-        }
-
-        .partner-list li h3 {
-            margin-top: 10px;
-        }
-
-        .social-icons {
-            margin-top: 20px;
-            text-align: center;
-        }
-
-        .social-icons a {
-            margin: 0 15px;
-            font-size: 1.5em;
-            color: #333;
-            text-decoration: none;
-        }
-
-        footer {
-            background-color: #333;
-            color: white;
-            padding: 20px 0;
-            text-align: center;
-        }
-
-        footer a {
-            color: #4CAF50;
-            text-decoration: none;
-            font-weight: bold;
-        }
-
-        footer a:hover {
-            text-decoration: underline;
-        }
-
-        @media (max-width: 768px) {
-            section {
-                padding: 40px 5%;
-            }
-
-            header h1 {
-                font-size: 2em;
-            }
-
-            section h2 {
-                font-size: 1.8em;
-            }
-
-            .cta-button {
-                padding: 12px 25px;
-                font-size: 1.1em;
-            }
-        }
-    </style>
+    <title>GreenTrack - Strona Główna</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
 
     <header>
-        <h1>GreenTrack - Partnerzy & Blog</h1>
-        <p>Nasze wsparcie w ochronie środowiska</p>
+        <h1>GreenTrack</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Strona Główna</a></li>
+                <li><a href="partnerzy.html">Partnerzy</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="kontakt.html">Kontakt</a></li>
+            </ul>
+        </nav>
     </header>
 
     <section>
-        <h2>Partnerzy</h2>
-        <p>Współpracujemy z organizacjami i firmami, które wspierają nasze proekologiczne inicjatywy. Lista partnerów jest w trakcie aktualizacji.</p>
-
-        <ul class="partner-list">
-            <!-- Przykładowi partnerzy -->
-            <li>
-                <img src="https://via.placeholder.com/150" alt="Partner 1">
-                <h3>Partner 1</h3>
-            </li>
-            <li>
-                <img src="https://via.placeholder.com/150" alt="Partner 2">
-                <h3>Partner 2</h3>
-            </li>
-            <li>
-                <img src="https://via.placeholder.com/150" alt="Partner 3">
-                <h3>Partner 3</h3>
-            </li>
-        </ul>
-
-    </section>
-
-    <section>
-        <h2>Blog</h2>
-        <p>Przeczytaj nasze najnowsze wpisy o ochronie środowiska i proekologicznych inicjatywach.</p>
-
-        <div>
-            <h3>Jak zacząć działać na rzecz planety?</h3>
-            <p>Proste kroki, które możesz podjąć już teraz, aby wprowadzić zmiany na lepsze. Zaczynamy od małych nawyków!</p>
-            <a href="#" class="cta-button">Przeczytaj więcej</a>
-        </div>
-
-        <div style="margin-top: 30px;">
-            <h3>Zero Waste – Kiedy warto zacząć?</h3>
-            <p>Oto nasze wskazówki, jak wprowadzić filozofię Zero Waste do swojego życia.</p>
-            <a href="#" class="cta-button">Przeczytaj więcej</a>
-        </div>
-
-    </section>
-
-    <section class="social-icons">
-        <a href="https://www.facebook.com/TwojaStrona" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="40">
-        </a>
-        <a href="https://www.instagram.com/TwojaStrona" target="_blank">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/95/Instagram_logo_2022.svg/1024px-Instagram_logo_2022.svg.png" alt="Instagram" width="40">
-        </a>
+        <h2>Witamy na GreenTrack!</h2>
+        <p>GreenTrack to aplikacja, która pomaga w realizacji proekologicznych wyzwań i działań na rzecz naszej planety.</p>
     </section>
 
     <footer>
         <p>© 2025 GreenTrack. Wszystkie prawa zastrzeżone.</p>
-        <p><a href="#">Polityka prywatności</a> | <a href="#">Kontakt</a></p>
     </footer>
 
 </body>
